--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
